MonetDB/src/mal/Tests/tst010.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## syntax analysis test for guarded blocks, redo's and leave's
#barrier	L:= 1;
#	#do it
#	leave Z;	# not known in block
#	redo L;
#end 	L;
#	redo L;		# outside block
#	leave X;	# outside block
#	redo A;		# outside block
#barrier X:=1;
#	leave L;	# outside block
#	leave X;
#	redo L;		# outside block
#end	X;
#barrier A:=1;
#	barrier B:= 1;
#		redo A;
#	end	B;
#	barrier C:=1;
#		leave A;
#	end 	C;
#
#	end	B;	# out of order
#	end	F;	# unknown
#
#	barrier D:=1;
#		leave D;
#		redo  D;  # dead code
#	end	D;
#	barrier D:=2;		# duplicate block
#	end	D;
#end	A;
#barrier  unfinished:= 1;
#	f:=1;
#
!ERROR: 1: barrier 'L' should be of type bit
!ERROR: 2:label 'Z' not in guarded block
!ERROR: 5:label 'L' not in guarded block
!ERROR: 6:label 'X' not in guarded block
!ERROR: 7:label 'A' not in guarded block
!ERROR: 8: barrier 'X' should be of type bit
!ERROR: 9:label 'L' not in guarded block
!ERROR: 11:label 'L' not in guarded block
!ERROR: 20:end-label 'B' doesnot match 'A'
!ERROR: 13: barrier 'A' should be of type bit
!ERROR: 14: barrier 'B' should be of type bit
!ERROR: 17: barrier 'C' should be of type bit
!ERROR: 21: end-label 'F' without begin-label
!ERROR: 22: barrier 'D' should be of type bit
!ERROR: 26: barrier 'D' should be of type bit
!ERROR: 29: begin-label 'unfinished' without end-label
!ERROR: 29: barrier 'unfinished' should be of type bit
function Admin.main():int;	#0:void (main:int)
barrier	L := 1;	#1:int (L:int)($2:int)
	leave Z;	#2:void (Z:any)
	redo L ;	#3:int (L:int)
end	L;	#4:int (L:int)
	redo L ;	#5:int (L:int)
	leave X;	#6:void (X:int)
	redo A ;	#7:void (A:int)
barrier	X := 1;	#8:int (X:int)($2:int)
	leave L;	#9:int (L:int)
	leave X;	#10:int (X:int)
	redo L ;	#11:int (L:int)
end	X;	#12:int (X:int)
barrier	A := 1;	#13:int (A:int)($2:int)
barrier	B := 1;	#14:int (B:int)($2:int)
	redo A ;	#15:int (A:int)
end	B;	#16:int (B:int)
barrier	C := 1;	#17:int (C:int)($2:int)
	leave A;	#18:int (A:int)
end	C;	#19:int (C:int)
end	B;	#20:int (B:int)
end	F;	#21:str (F:str)
barrier	D := 1;	#22:int (D:int)($2:int)
	leave D;	#23:int (D:int)
	redo D ;	#24:int (D:int)
end	D;	#25:int (D:int)
barrier	D := 2;	#26:int (D:int)($10:int)
end	D;	#27:int (D:int)
end	A;	#28:int (A:int)
barrier	unfinished := 1;	#29:int (unfinished:int)($2:int)
	f := 1;	#30:int (f:int)($2:int)
end function;	#31:void 
!ERROR: SyntaxError::'Admin.main' contains errors
>